Version update con't: Necessary changes in STAC implementations to compile: API adaptations like PlayerInterface -> PlayerClientListener; add StacStartGame message type; add gson 2.8.6 dep, update junit to 4.13.1; see commit message detail; passes all unit tests except TestRecorder
rename message/SOCStartGame to StacStartGame to keep Stac fields; restore SOCStartGame to standard JSettlers contents

pom.xml + gson 2.8.6 for jsettlers2 json savegame feature, junit 4.11 -> 4.13.1 (needs 4.12 for assertArrayEquals(boolean[], boolean[]))

Temporarily comment out senders/receivers of error texts MSG_ILLEGAL_TRADE, MSG_ILLEGAL_OFFER, MSG_REJECTED_TRADE_CONFIRMATION

Rewrites to use SOCBoard.getCities, getSettlements, getRoadsAndShips instead of getPieces, and misc cleanup/paramterization: SOCGame.turnCurrentStateIntoOGSR, SOCRobotBrain.calcMaxDepthWithPath, isNotIsolated, pathAndRoadsExist, StacRobotNegotiator.getExpectedResourcesFromRoll, util/SaveBoardConfigFromGame.main

server/SOCGameHandler:
- Stac trade text command handling moved from processDebugCommand to new SOCServer.processStacTextCommand (was in handleGAMETEXTMSG in v1)

server/SOCGameMessageHandler:
- Refactor stac loadGame: take gaName, folderName instead of SOCLoadGame message

server/SOCServer construcs: require non-null SOCLogger

game/SOCBoard:
- move MINEDGE_V1, MAXEDGE_V1, MINNODE_V1 up from SOCBoard4p for Stac reference
- rename stac-added methods to getAdjacentNodesToHex_SSettlers, getAdjacentEdgesToHex_SSettlers to avoid conflicts with jsettlers v2 adds
- re-add getMinNode for stac to call, from jsettlers 1.x upstream of stac

game/SOCGameList: Move stac-added replaceGame to SOCGameListAtServer

calls to SOCDevCardSet.getNumVPCards -> SOCInventory.getNumVPItems, nearby conversions SOCDevCardSet -> SOCInventory; to SOCDevCardSet.setAmount(getAmount+1, ...) -> SOCInventory.addDevCard(1, ...), .removeDevCard(...)

robot/SOCRobotDM:
- combine constructors' redundant code, to simpify use in subclasses li